# protein_folding_graphs

./: .gitignore  README.md  example_usage.ipynb  example_usage_villin.ipynb  pyproject.toml  topo_tools.py  topology.ipynb  workbook.ipynb  workbook2.ipynb  workbook_claude.ipynb
src/: __init__.py  clustering.py  contact_energies.py  contact_energies_claude.py  contacts.py  graph_analysis.py  graphs.py  plotting.py  topology.py  topology_claude.py  transition_state.py
src/protein_folding_graphs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
